test/coerceNegativeNatural.slq
// args: --run

def main(){
	x:=-1;
	y:=x coerce !ℕ; // error
	return y;
}
